# quant-trade

./: README-zh.md  README.md  pyproject.toml  run.py
assets/: trades.csv
docs/: reddit_post.md
quant_trade/analysis/: generate_report.py  screener.py
quant_trade/core/: config.py
skills/quant-trade/scripts/core/: factors.py
tests/: test_all.py  test_ibapi.py  test_ibsync.py
